# check-physicell-it-startup

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: scheduled-monitor.yml
config/: settings.py
helpers/: browser.py  galaxy_client.py  results.py
scripts/: write_summary.py
tests/: test_galaxy_client.py  test_physicell_startup.py  test_settings.py
